fix UCB-8 and UCB-10, added dtos and mappers, changed entities and dtos to lombok